Fix CORS preflight OPTIONS 403